--- a/reference/refs.bib
+++ b/reference/refs.bib
@@ -1,22 +1,33 @@
-@misc{Lant2010,
-author = {Lant, Michael},
-booktitle = {Software Development, Agile Methods and the Intersection of People Process and Technology},
-title = {{How To Make Your Project Not Suck by Using an Agile Project Charter}},
-url = {http://michaellant.com/2010/05/18/how-to-make-your-project-not-suck/},
-year = {2010}
+
+@misc{buzztime,
+title = {{How to Pick the Best Beverage Inventory Software (10 Reviews)}},
+url = {https://www.buzztime.com/business/blog/how-to-pick-the-best-beverage-inventory-software-10-reviews},
+urldate = {2020-07-10},
+note={{Buzztime, 2020}}
 }
-@book{Rubin2012,
-author = {Rubin, Kenneth S},
-edition = {1st},
-isbn = {0137043295, 9780137043293},
-publisher = {Addison-Wesley Professional},
-title = {{Essential Scrum: A Practical Guide to the Most Popular Agile Process}},
-year = {2012}
+@misc{orca,
+title = {{Restaurant Inventory Software | Orca Inventory}},
+url = {https://www.orcainventory.com/features/},
+urldate = {2020-07-10},
+note={{Orcainventory.com, 2020.}}
 }
-@techreport{,
-institution = {U.S. Department of Defense},
-pages = {2--7},
-title = {{DOD Sample Phase I Proposal}},
-url = {http://www.acq.osd.mil/osbp/sbir/sb/resources/sample-proposals.shtml},
-year = {2011}
+@misc{partender,
+title = {{Liquor Inventory| Bar Inventory| AccuBar Products}},
+url = {https://www.accubar.com/liquor-inventory-management-products/#1442247357269-72721ca9-3a59},
+urldate = {2020-07-10},
+note={{Accubar.com, 2020.}}
 }
+@misc{eicher,
+author= {T Eicher},
+title = {{Barkeep : The best way to keep track of your liquor inventory on iPhone, iPad or iPod Touch}},
+url = {https://www.barkeepapp.com/},
+urldate = {2020-07-10},
+note={{ Barkeepapp.com, 2020.}}
+}
+@misc{accubar,
+title = {{AccuBar Reviews and Pricing - 2020}},
+url = {https://www.capterra.com/p/130915/AccuBar/},
+urldate = {2020-07-10},
+note={{Capterra.com, 2020}}
+}
+
