--- a/tex/background.tex
+++ b/tex/background.tex
@@ -1,1 +1,1 @@
-An in-depth explanation of the problem, including the "business case". What is wrong with the status-quo or what opportunity exists that justifies undertaking this project (expanding upon the vision statement)? If you have a clear customer or sponsor, why do they want you to work on this? What is the existing relationship, if any, between the development team and the customer? This section should occupy 1/2 - 1 full page.
+We all have unique hobbies and habits. Some people enjoy doing outdoor activities whereas other enjoy doing indoor activities such as collecting things that they like. Different people have different kinds of interests such as collecting antique coins, seashells, alcoholic beverages, etc. We are focused and dedicated to work on a project that helps those have an interest in collecting various beverages by allowing them to organize their beverage properly. That is why we have decided to work on the app called The Beverage Management which was inspired by Dr. Conly's idea. This app will help an individual as well as small businesses to keep track of the beverages in timely manner. This app will allow a customer to keep the track of name, expiry date, and location of the beverage which will make it easier for them to find the specific one that they are looking for. This app will save people's time and money as it will keep the beverages information date updated and will allow them to consume the beverage before the expiry date.
