--- a/tex/cost_proposal.tex
+++ b/tex/cost_proposal.tex
@@ -1,7 +1,23 @@
-This section contains the approximate budget for the project, where that money will come from, and any other support. This text should be replaced with a discussion and justification of major expenses, but not the actual monetary amounts (that will go in the preliminary budget section below). 
+Our project is supported and sponsored by the CSE department of University of Texas at Arlington (UTA). 
+Approximately \$800 will be provided to us to help our team with completion of the project. However, the team 
+will need to provide valid proof of the expenses in order to be funded. Our team prioritizes on delivering a 
+smooth working software with minimum cost. Therefore, expenses that our team can think of is accessing the 
+global online alcohol inventory database through barcode. Through online research, we found out that there 
+are multiple pricing depending on the package we want to buy. Therefore, the exact cost of purchase is yet 
+to be finalized. Another expense that our project might include is accessing the features of Firebase.
 
 \subsection{Preliminary Budget}
-Include a high level budget table for components, fabrication, software licensees, development hardware, etc. This should be in a tabular format broken up into appropriate line items. 
-
+\begin{table}[h]
+    \resizebox{\textwidth}{!}{
+    \begin{tabular}{|l|l|}
+    \hline
+     \textbf{Description} & \textbf{Estimated Cost (in dollars)} \\ \hline
+     Product data API  & \$25 to \$100 \\ \hline
+     Firebase (Blaze Plan) & \$25 \\ \hline
+    \end{tabular}}
+    \caption{Overview of highest exposure project risks} 
+    \end{table}
 \subsection{Current \& Pending Support}
-What are all of the funding sources for the project, and are there any potential funding sources that haven't been secured yet? List all funding sources (including the default funding amount provided by the CSE department) and their dollar amounts.
+Our team aims to deliver a working software with minimum expenses. Currently, there are no pending supports 
+for this project. However, our team is confident that the extra expenses related to the project can be covered 
+by the \$800 funding provided by the CSE department.
