--- a/tex/facilities_equipment.tex
+++ b/tex/facilities_equipment.tex
@@ -1,1 +1,10 @@
-What lab space, testing grounds, makerspaces, etc. will you need to complete the project? Will you require any specific equipment, and if so, where will you get it (borrow, lease, purchase, outsource, already present in the lab, etc.). This section should occupy 1/2 page.
+Our project is a software-based project therefore, the equipment used will be our personal desktops and laptops. 
+The team concluded that no other exterior hardware product will be needed. However, in terms of software our team 
+will be needing various development tools. 
+\\
+The team will be using Barcode scanner API, which will help our software to successfully identify products
+ through barcode. Firebase is another such tool that our team will be using for realtime database, cloud 
+ messaging and user login authentication. There are free versions available in the market for both Barcode 
+ scanner API and Firebase but, the free versions come with limitations such as limited amount of storage space
+  for Firebase and limited number of barcode scans for the barcode API. Therefore, the team may need to use the 
+  provided funds to access the additional features.
