--- a/tex/mission.tex
+++ b/tex/mission.tex
@@ -1,1 +1,15 @@
-This is the "What" of the project and it states what will be done in the project to achieve its higher purpose (the higher purpose being the vision discussed above). This section should focus mostly on what your solution is going to be and what it is going to do (i.e., we are going to build an app, robot, device, etc. to perform some task which realizes the vision).
+Our team aims to develop a well-managed and easy to navigate application for managing
+alcoholic beverage. Apart from easy navigation, we aim to develop a systematic way of keeping
+tabs of the inventory with maximum accuracy. Through our application, users will be able to
+successfully track and categorize the alcohol products they have. Our application provides a
+chance for the users track the financial losses that may have occurred by accidental damage or
+theft of a product. Our product aims to attract individuals who love collecting variety of alcohol
+product, alcohol beverage companies and businesses that sell alcohol.
+\\
+\\
+The tools that we will be using while implementing the project are:
+\begin{itemize}
+  \item android studio
+  \item iOS
+  \item API calls
+\end{itemize}
