--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -1,3 +1,20 @@
-Discuss the state-of-the-art with respect to your product. What solutions currently exist, and in what form (academic research, enthusiast prototype, commercially available, etc.)? Include references and citations as necessary using the \textit{cite} command, like this \cite{Rubin2012}. If there are existing solutions, why won't they work for your customer (too expensive, not fast enough, not reliable enough, etc.). This section should occupy 1/2 - 1 full page, and should include at least 5 references to related work. All references should be added to the \textit{.bib} file, fully documented in IEEE format, and should appear in the \textit{references} section at the end of this document (the IEEE citation style will automatically be applied if your reference is properly added to the \textit{.bib} file).
+There many beverage inventory management apps in different platforms available currently in the market. 
+Partender, Barkeep, Orca Inventory \& Ordering and Accubar are among the top results. These applications are 
+commercially used in bars, restaurants and retail stores.  
 
-ProTip: Consider using a citation manager such as Mendeley, Zotero, or EndNote to generate your \textit{.bib} file and maintain documentation references throughout the life cycle of the project.
+ Firstly, Partender is the application genuinely indented for smart phones, android and iOS. According to their 
+ website their clients can save up to  \$10,000 per month \cite{buzztime} . It's a basic application where 
+ it tries to keep track of amount of beverage it has in the stock by just taking the picture of the bottle and 
+ swiping the level of content, company's motto "Tap-Swipe-Done". The application also helps to order more 
+ beverage and can track the most sellers and dead stocks currently in the system \cite{accubar}.
+
+Another interesting application is Accubar, according to the website, "We have taken tried and true beverage 
+management methods and automated them, using fast, sturdy bar-code scanners to save labor, eliminate error points
+ and drive loss prevention and accountability" \cite{partender}.  Products other features includes, inventory 
+ counts, receiving, perpetual inventory, supplier ordering, transfers between locations, empties, etc. 
+
+The solutions exist, however at some large scale and including other unnecessary features (transferring beverages,
+ supplier ordering etc.). Being so used commercially has its price demand with Partender ended up for \$165 per 
+ month \cite{partender}, Barkeep for \$40-50 per month and Accubar's pricing is not mentioned by the vendor 
+ \cite{eicher}. Orca Inventory \& Ordering has inventory tracking and control, budgeting tools, and one click 
+ ordering system \cite{orca}, which seems too commercials as compared to our client's personal need. 
