--- a/tex/roles_responsibilities.tex
+++ b/tex/roles_responsibilities.tex
@@ -1,1 +1,5 @@
-Who are the stakeholders of the project? Who will be the point of contact from the sponsor or customer side? Who are the team members, and what will be their areas of responsibility? Will your team maintain the product owner and scrum master for the whole project, or will that role change periodically? This section should occupy 1/2 - 1 full page.
+Stakeholders of our project would be Dr. Christopher Conly and CSE department, Points of contact from the sponsor or customer side and Scrum Master is Dr. Christopher Conly.
+\\
+The team members are Bishal Paudel, Kunal Samant, Nirjal Phaiju, Sima Ryamajhi, and Lokendra B. Chhetri. As Miyamoto Musashi said, "Fixation is the way to death. Fluidity is the way to life." So, to give life to this project, we decided to gyrate our Scrum Master and team leader in every phase. Initially, we decided to appoint Kunal as a team lead and Scrum Master as Dr. Conly.
+\\
+For this phase, Kunal and Nirjal will be working on Backend whereas Bishal and Lokendra will work on GUIs and frontend. Sima will work as a risk management lead. As a team, we will be giving 100{\%} on the tasks we are assigned and also helping each other out.
