--- a/tex/vision.tex
+++ b/tex/vision.tex
@@ -1,1 +1,7 @@
-The vision defines the "Why" of the project. This is the higher purpose, or the reason for the project's existence. This section should avoid mentioning implementation details, and focus more on what the current problem is and what would be gained if the problem were to be solved. In short, the is the reason that you are going to be working on something, not the method(s) that you will be employing.
+Consumers lose track of the beverages they collect which can often lead to the drinks expiring, or sitting on the shelf
+untouched for years. This is often the case for consumers who are fond of collecting drinks such as rare beer or 
+fancy wine. This can lead to a substantial loss of money, time, and shelf space. Therefore, we have decided to create a 
+project which can manage the inventory of drinks which a particular consumer owns, allowing them to customize their collection
+on the app and create/delete shelves as needed. The app will send notifications to the user to notify them in advance if any
+ drink is about to expire. Our app will be android based and will be accessible to the general public to organize their shelves.
+We expect to finish with minimum expenditure while satisfying a higher number of objectives.
