--- a/tex/assumptions.tex
+++ b/tex/assumptions.tex
@@ -1,15 +1,11 @@
-An assumption is a belief of what you assume to be true in the future. You make assumptions based on your knowledge, experience or the information available on hand. These are anticipated events or circumstances that are expected to occur during your project's life cycle.
-
-Assumptions are supposed to be true but do not necessarily end up being true. Sometimes they may turn out to be false, which can affect your project significantly. They add risks to the project because they may or may not be true. For example, if you are working on an outdoor unmanned vehicle, are you assuming that testing space will be available when needed? Are you relying on an external team or contractor to provide a certain subsystem on time? If you are working at a customer facility or deploying on their computing infrastructure, are you assuming you will be granted physical access or network credentials?
-
-This section should contain a list of at least 5 of the most critical assumptions related to your project. For example:
-
-The following list contains critical assumptions related to the implementation and testing of the project.
+The following list contains critical assumptions related to the implementation and testing of the project:
 
 \begin{itemize}
-  \item A suitable outdoor testing location will be available by the 3rd sprint cycle
-  \item The X sensing system developed by Sensor Consulting Company will be delivered according to specifications by the 4th sprint cycle
-  \item Access to the customer installation site will be provided by the 5th sprint cycle
-  \item The customer will provide ample power and network connectivity at the installation site
-  \item The installation site network infrastructure will allow TCP network traffic on port 8080
+  \item The budget provided by the CSE department will be enough to deliver and smooth and working application.
+  \item The members of the team are familiar with front-end and back-end aspect of software development which 
+  will be critical for balanced distribution of the workload among group members.
+  \item No external hardware will be needed in order to complete our project
+  \item Users of the application will have access to internet and camera.
+  \item The application will focus on android users.
+  \item A suitable and affordable API will be found in order to successfully implement barcode scanner.
 \end{itemize}
