--- a/tex/constraints.tex
+++ b/tex/constraints.tex
@@ -1,15 +1,11 @@
-Constraints are limitations imposed on the project, such as the limitation of cost, schedule, or resources, and you have to work within the boundaries restricted by these constraints. All projects have constraints, which are defined and identified at the beginning of the project.
-
-Constraints are outside of your control. They are imposed upon you by your client, organization, government regulations, availability of resources, etc. Occasionally, identified constraints turn out to be false. This is often beneficial to the development team, since it removes items that could potentially affect progress.
-
-This section should contain a list of at least 5 of the most critical constraints related to your project. For example:
-
-The following list contains key constraints related to the implementation and testing of the project.
+The following list contains key constraints related to the implementation and testing of the project. 
 
 \begin{itemize}
-  \item Final prototype demonstration must be completed by May 1st, 20XX
-  \item The customer will provide no more than two maintenance personnel to assist in on-site installation
-  \item Customer installation site will only be accessible by development team during normal business hours
-  \item Total development costs must not exceed \$800
-  \item All data obtained from customer site must be reviewed and approved for release by the Information Security Office prior to being copied to any internet connected storage medium
+  \item A team of five members will work on the project.
+  \item All the team meetings will be done through Microsoft Teams software.
+  \item The development costs must be less than \$800. 
+  \item Final prototype demonstration must be completed by August 12, 2020. 
+  \item Access to online beverage inventory database will be made available during the development phase of the application.
+  \item Application will be made using android OS.
+
 \end{itemize}
