--- a/tex/documentation_reporting.tex
+++ b/tex/documentation_reporting.tex
@@ -1,85 +1,85 @@
 %%% In this section, you will describe all of the various artifacts that you will generate and maintain during the project life cycle. Describe the purpose of each item below, how the content will be generated, where it will be stored, how often it will be updated, etc. Replace the default text for each section with your own description. Reword this paragraph as appropriate.
 
 \subsection{Major Documentation Deliverables}
-These deliverables are major grade components of the course. Completing these documents should generally be the sprint goal during the applicable sprint period. Refer to current and previous course syllabi and schedules to estimate the due dates of these items. Remove this explanatory paragraph from your draft, but leave the heading.
-
+We will divide the work between all the team members, and complete our individual part. Each team member will be responsible for maintaining their own part and updating if necessary. The final document will be reviewed by the team before submitting.  
 \subsubsection{Project Charter}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
-
+The initial version of the charter will be revised by the group before submitting it on July 12th, 2020. The charter will be updated as per the changes made in this project. Also, feedback from the team member and Professor will be taken into consideration, and the charter will be updated before the final version. The final version will be delivered on December 1st, 2020.
 \subsubsection{System Requirements Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
-
+We will write all the requirements for the project and make sure with our customer/Professor to check that if all the requirements have been included before starting on project. When changes are made in the projects, requirements will be updated and maintained. While making the projects we will contact customer to make sure that our software meets customer all needs. We will make required changes in the requirements from the feedback of the customer. The final version will be submitted on July 27th, 2020.
 \subsubsection{Architectural Design Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
-
+The initial document will be submitted on-----Before starting any of the development in the project, we will make the architectural design layout and submit it to the customer. After the feedback of the customer on its we will start to work on development. There might be few changes in this document after the feedback of the customer and Professor.  This document will be updated when there are any changes made in the design. The final version will be delivered on August 20th, 2020.
 \subsubsection{Detailed Design Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+Detailed design specification will be started after we have requirements specification and architectural design specification so that we will have everything to start working on. The layout for the detailed design will be shown to the customer and Professor for the validation. The initial version will be submitted on September 21st, 2020. There will be changes made in this document over the time. This document will be updated when there are some changes made in the design of the project after the validation with the customer. The final version will be submitted on December 1st, 2020.
+
+
+
 
 \subsection{Recurring Sprint Items}
-The following items will be documented and maintained during each individual sprint. As above, remove this paragraph from your draft, but leave the heading.
-
 \subsubsection{Product Backlog}
-How will items be added to the product backlog from the SRS? How will these items be prioritized? Who makes the decision (product owner, group vote, etc.)? What software will be used to maintain and share the product backlog with team members and stakeholders?
-
+We will add items to the product backlog based on their level of importance and dependencies. We will
+decide what elements are a must-have to be completed first while also making sure items that are a
+critical part of the other parts of the software are placed at a higher priority. We will decide as a group
+what needs to get done and in what order. At the moment, we haven't narrowed down exactly what
+software we will use to maintain the backlog.
 \subsubsection{Sprint Planning}
-How will each sprint plan be planned? How many sprints will there be (you need to look at the schedules for this course and previous Senior Design II courses during the appropriate semesters to figure this out).
+Each sprint will be decided based off of the previous sprint and what is needed to be done. There will be roughly 4 sprints.
 
 \subsubsection{Sprint Goal}
-Who decides the sprint goal? How will you involve your customer in this process?
-
+Our sprint goal will be decided by our group.
 \subsubsection{Sprint Backlog}
-Who decides which product backlog items make their way into the sprint backlog? How will the backlog be maintained (collaboration software, a "scrum board", etc.)?
-
+The sprint backlog will be similar to the product backlog and the sprints will be decided based on the remaining tasks,
+ordered based on their priority.
 \subsubsection{Task Breakdown}
-How will individual tasks be assigned from the sprint backlog? Will it be up to each team member to voluntarily claim a task, or will it come from the product owner? How will time spent on tasks be documented?
-
+Each task will be discussed and then assigned to a specific member in order to ensure a fair distribution and based on the members
+strengths and weaknesses.
 \subsubsection{Sprint Burn Down Charts}
-Who will be responsible for generating the burn down charts for each sprint? How will they be able to access the total amount of effort expended by each individual team member? What format will the burn down chart use (include an example burn down chart below).
+The team lead for that specific sprint will be tasked to generate a Burn Down chart:
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.5\textwidth]{images/test_image}
+    \includegraphics[width=0.6\textwidth]{images/burndown}
     \caption{Example sprint burn down chart}
 \end{figure}
 
 \subsubsection{Sprint Retrospective}
-How will the sprint retrospective be handled as a team? When will this discussion happen after each sprint? What will be documented as a group and as individuals, and when will it be due?
-
+At the end of each sprint we will gather together and meet to discuss what will be needed in further sprints. The sprints wont have specific due dates
+as the team would be able to communicates the status of their tasks.
 \subsubsection{Individual Status Reports}
-What sort of status will be reported by each individual member, and how often will it be reported? What key items will be contained in the report?
-
+We will report to each other and communicate regularly about the updates on the project. We will note important points which will need to be discussed prior to deadlines.
 \subsubsection{Engineering Notebooks}
-How often will the engineering notebook be updated, at a minimum, by each team member? What is the minimum amount of pages that will be completed for each interval, and how long will that interval be? How will the team keep each member accountable? Who will sign of as a "witness" for each ENB page?
+The engineering notebook should be updated whenever ideas related to the project arise. Hopefully,
+there would be a few updates between each meeting that we have regarding large changes to the project.
+
 
 \subsection{Closeout Materials}
 The following materials, in addition to major documentation deliverables, will be provided to the customer upon project closeout. Remove this paragraph from your draft, but leave the heading.
 
 \subsubsection{System Prototype}
-What will be included in the final system prototype? How and when will this be demonstrated? Will there be a Prototype Acceptance Test (PAT) with your customer? Will anything be demonstrated off-site? If so, will there be a Field Acceptance Test (FAT)?
-
+The Final System Prototype will have an android application that is well tested and properly functional. 
+The Prototype shall be demonstrated to relevant stakeholders before the end of Senior Design 2. The team will 
+be meeting with the project supervisor and customer on several occasions for Prototype Acceptance Test. This 
+will help our team to ensure that we are moving in the right direction. There will be no demonstrations off-site 
+therefore, no need for Field Acceptance Test.
 \subsubsection{Project Poster}
-What will be included on the poster, what will be the final dimensions, and when will it be delivered?
-
+The poster of our project will include our applications vision, mission and guidelines for installing 
+the application. The Dimension of the poster approximately 20-30 inches wide and 30-40 inches tall. The poster 
+will be delivered one day before the final presentation day of Senior Design 2.
 \subsubsection{Web Page}
-What will be included on the project web page? Will it be accessible to the public? When will this be delivered? Will it be updated throughout the project, or just provided at closeout (at a minimum, you need to provide a simple web page at the end).
-
+Web Page will contain the basic information of your project. This web page will help the readers learn more about 
+the application and the team behind the application. The web page will consist of the team's vision, mission, 
+background and introduction to the team members.
 \subsubsection{Demo Video}
-What will be shown in the demo video(s)? Will you include a B-reel footage for future video cuts? Approximately how long will the video(s) be, and what topics will be covered?
-
+The Demo video will show the viewers how to install and use the software. 
+It will inform the users about the major features of the application. The video will be 3-6 minutes long.
 \subsubsection{Source Code}
-How will your source code be maintained? What version control system will you adopt? Will source code be provided to the customer, or binaries only? If source code is provided, how will it be turned over to the customer? Will the project be open sourced to the general public? If so, what are the license terms (GNU, GPL, MIT, etc.). Where will the license terms be listed (in each source file, in a single readme file, etc.).
-
+The source code will be pushed to github repository periodically. The source code will only be available 
+for team members until the project is complete. After the completion of project, the source code will be 
+available to the sponsors of the project, and decision of making code available to public will be decided later.
 \subsubsection{Source Code Documentation}
-What documentation standards will be employed? Will you use tools to generate the documentation (Doxygen, Javadocs, etc.). In what format will the final documentation be provided (PDF, browsable HTML, etc.)?
-
-\subsubsection{Hardware Schematics}
-Will you be creating printed circuit boards (PCBs) or wiring components together? If so, list each applicable schematic and what sort of data it will contain (PCB layout, wiring diagram, etc.). If your project is purely software, omit this section.
-
-\subsubsection{CAD files}
-Will the project involve any mechanical design, such as 3D printed or laser-cut parts? If so, what software will you use to generate the files and what file formats will you provide in your closeout materials (STL, STEP, OBJ, etc.). If your project is purely software, omit this section.
-
+We will present our documentation in html format, with documentation for each function or parts of
+the code.
 \subsubsection{Installation Scripts}
-How will the customer deploy software to new installations? Will you provide installation scripts, install programs, or any other tools to improve the process? Will there be multiple scripts provided (perhaps separate scripts for the graphical front end and back end server software)? 
-
+The app will be available in app store so it will be very use to download and install.
 \subsubsection{User Manual}
-Will you customer need a printed or digital user manual? Will they need a setup video? Decide now what will be provided and discuss.
+This app will be user friendly and very easy to use. The app will have short introduction video explaining 
+about its features and how this app works so it will easy for everyone to use this app.
