--- a/tex/risks.tex
+++ b/tex/risks.tex
@@ -1,17 +1,13 @@
-This section should contain a list of at least 5 of the most critical risks related to your project. Additionally, the probability of occurrence, size of loss, and risk exposure should be listed. For size of loss, express units as the number of days by which the project schedule would be delayed. For risk exposure, multiply the size of loss by the probability of occurrence to obtain the exposure in days. For example:
-
-The following high-level risk census contains identified project risks with the highest exposure. Mitigation strategies will be discussed in future planning sessions.
-
-\begin{table}[h]
+\begin{table}[H]
 \resizebox{\textwidth}{!}{
 \begin{tabular}{|l|l|l|l|}
 \hline
  \textbf{Risk description} & \textbf{Probability} & \textbf{Loss (days)} & \textbf{Exposure (days)} \\ \hline
- Availability of X sensor module due to contractor delay  & 0.50 & 20 & 10 \\ \hline
- Outdoor testing grounds are not available  & 0.20 & 14 & 2.8 \\ \hline
- Internet access not available at installation site  & 0.30 & 9 & 2.7 \\ \hline
- Delays in shipping from overseas vendors  & 0.10 & 20 & 2.0 \\ \hline
- Certification delays at compliance testing facility & 0.15 & 10 & 1.5 \\ \hline
+ Delay in the availability of online beverage inventory database  & 0.50 & 16 & 8 \\ \hline
+ Lack of user feedback during the development due to the current situation  & 0.7 & 10 & 7 \\ \hline
+ Schedule conflicts and time management  & 0.30 & 12 & 4 \\ \hline
+ Lack of knowledge of the tools and technologies required for this project  & 0.60 & 10 & 6 \\ \hline
+ Changes in requirements  & 0.5 & 20 & 10 \\ \hline
 \end{tabular}}
 \caption{Overview of highest exposure project risks} 
 \end{table}
